# raptor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/raptor/: Cargo.toml
crates/raptor-core/: Cargo.toml
crates/raptor-core/src/: acquire.rs  config.rs  control.rs  deb.rs  dependency.rs  dpkg_status.rs  error.rs  fs_util.rs  installer.rs  keyring.rs  lib.rs  manifest.rs  mirror.rs  ppa.rs  release.rs  remote.rs  repo_config.rs  repository.rs  resolver.rs  scaffold.rs  sources.rs  sources_config.rs  state.rs  trust.rs  unattended.rs  verify.rs
crates/raptor-core/src/mirror/: mock.rs
crates/raptor-core/tests/: acquire.rs  gpg_acquire.rs  integration.rs  mirror_sync.rs  secure_update.rs
crates/raptor/src/: context.rs  global.rs  lib.rs  main.rs  term.rs
crates/raptor/src/commands/: config.rs  core.rs  daemon.rs  mod.rs  pkg.rs  repo.rs
examples/: demo.sh
examples/config/: config.yaml  raptor-daemon.service
examples/demo/: sources.list  state.json  state4.json
examples/demo/archives3/: hello-raptor_0.1.0_all.deb
examples/demo/pkg/DEBIAN/: control
examples/demo/repo/: SIGNING.md  repo.yaml  sources.list.snippet
examples/demo/repo/dists/stable/: Release
examples/demo/repo/dists/stable/contrib/binary-arm64/: Packages
packaging/: raptor.yaml
scripts/: build-raptor-deb.sh  vm-host.sh  vm-setup.sh  vm-smoke.sh
