[workspace]
resolver = "2"
members = [
    "crates/raptor-core",
    "crates/raptor",
]

[workspace.package]
version = "0.6.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Ryan Draga <ryan.draga@boxingoctop.us>"]

[workspace.dependencies]
anstream = "0.6"
anstyle = "1"
anyhow = "1"
ar = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
hex = "0.4"
md-5 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
walkdir = "2"
xz2 = "0.1"
zstd = "0.13"
ureq = { version = "3", default-features = true }
