[package]
name = "raptor-core"
description = "Core library for Raptor APT-compatible package management"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
ar.workspace = true
chrono.workspace = true
flate2.workspace = true
hex.workspace = true
md-5.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
walkdir.workspace = true
xz2.workspace = true
zstd.workspace = true
ureq.workspace = true
